# Starter

./: .gitignore  CNAME  Cargo.toml  KodularStarter.py  KodularStarter.spec  KodularStarter.v  LICENSE  Linux-MakeroidStarter.py  MakeroidStarter.py  README.md  build.bat  bun.lockb  clean.bat  icon.icns  index.html  inno.iss  linux.py  package.json  requirements.txt  setup.py  tsconfig.json  utils.py  windows.py
.github/workflows/: ci.yml  publish.yml  pythonapp.yml
assets/css/: main.css
assets/js/: main.js
binary/: extractor.v  extractor_windows.v
css/: freelancer.css  freelancer.min.css
ext/adb/macos/: adb
src/: App.tsx  hooks.ts  main.css  main.rs  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: adb_commands.rs  lib.rs  main.rs  server.rs
src/components/: LocalServerStatus.tsx
