[package]
name = "starter"
version = "3.0.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
serde = { version = "1.0.214", features = ["derive"] }
tokio = { version = "1.41.1", features = ["full"] }
tracing-subscriber = "0.3.18"
serde_json = "1.0.132"
tower-http = { version = "0.6.1", features = ["cors", "normalize-path"] }
tower = "0.5.1"
adb_client = "2.0.2"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
